--- a/ETL_clean_wiki_movies.ipynb
+++ b/ETL_clean_wiki_movies.ipynb
@@ -216,7 +216,7 @@
    "outputs": [],
    "source": [
     "# 17. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = 'C:/Users/stanh/Documents/Bootcamp/Module8/Movies-ETL'\n",
+    "file_dir = 'Resources/'\n",
     "# The Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia-movies.json'\n",
     "# The Kaggle metadata\n",
