--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -305,7 +305,7 @@
    "outputs": [],
    "source": [
     "# 10. Create the path to your file directory and variables for the three files.\n",
-    "file_dir = 'C:/Users/stanh/Documents/Bootcamp/Module8/Movies-ETL'\n",
+    "file_dir = 'Resources/'\n",
     "# The Wikipedia data\n",
     "wiki_file = f'{file_dir}/wikipedia-movies.json'\n",
     "# The Kaggle metadata\n",
