Marker Requested Fix

--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,14 +136,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1 Add the function that takes in three arguments;\n",
     "# Wikipedia data, Kaggle metadata, and MovieLens rating data (from Kaggle)\n",
     "\n",
-    "def extract_transform_load():\n",
+    "def extract_transform_load(wiki_file, kaggle_file, ratings_file):\n",
     "    # Read in the kaggle metadata and MovieLens ratings CSV files as Pandas DataFrames.\n",
     "    kaggle_metadata = pd.read_csv(kaggle_file, low_memory=False)\n",
     "    ratings = pd.read_csv(ratings_file)    \n",
@@ -293,14 +293,12 @@
     "        rows_imported += len(data)\n",
     "\n",
     "        # add elapsed time to final print out\n",
-    "        print(f'Done. {time.time() - start_time} total seconds elapsed')\n",
-    "    \n",
-    "    return\n"
+    "        print(f'Done. {time.time() - start_time} total seconds elapsed')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,65 +314,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing rows 0 to 1000000...Done. 73.22843050956726 total seconds elapsed\n",
-      "importing rows 1000000 to 2000000...Done. 147.34632062911987 total seconds elapsed\n",
-      "importing rows 2000000 to 3000000...Done. 219.27610611915588 total seconds elapsed\n",
-      "importing rows 3000000 to 4000000...Done. 290.3116612434387 total seconds elapsed\n",
-      "importing rows 4000000 to 5000000...Done. 361.7275800704956 total seconds elapsed\n",
-      "importing rows 5000000 to 6000000...Done. 433.25476932525635 total seconds elapsed\n",
-      "importing rows 6000000 to 7000000...Done. 511.83665442466736 total seconds elapsed\n",
-      "importing rows 7000000 to 8000000...Done. 583.7736964225769 total seconds elapsed\n",
-      "importing rows 8000000 to 9000000...Done. 655.2040741443634 total seconds elapsed\n",
-      "importing rows 9000000 to 10000000...Done. 726.5200283527374 total seconds elapsed\n",
-      "importing rows 10000000 to 11000000...Done. 798.039692401886 total seconds elapsed\n",
-      "importing rows 11000000 to 12000000...Done. 869.2335126399994 total seconds elapsed\n",
-      "importing rows 12000000 to 13000000...Done. 939.9423131942749 total seconds elapsed\n",
-      "importing rows 13000000 to 14000000...Done. 1010.6626143455505 total seconds elapsed\n",
-      "importing rows 14000000 to 15000000...Done. 1082.0398907661438 total seconds elapsed\n",
-      "importing rows 15000000 to 16000000...Done. 1153.0556192398071 total seconds elapsed\n",
-      "importing rows 16000000 to 17000000...Done. 1224.7227861881256 total seconds elapsed\n",
-      "importing rows 17000000 to 18000000...Done. 1295.7660982608795 total seconds elapsed\n",
-      "importing rows 18000000 to 19000000...Done. 1367.1333248615265 total seconds elapsed\n",
-      "importing rows 19000000 to 20000000...Done. 1438.201875925064 total seconds elapsed\n",
-      "importing rows 20000000 to 21000000...Done. 1509.6711268424988 total seconds elapsed\n",
-      "importing rows 21000000 to 22000000...Done. 1580.4074835777283 total seconds elapsed\n",
-      "importing rows 22000000 to 23000000...Done. 1651.8432121276855 total seconds elapsed\n",
-      "importing rows 23000000 to 24000000...Done. 1722.8510835170746 total seconds elapsed\n",
-      "importing rows 24000000 to 25000000...Done. 1795.2030909061432 total seconds elapsed\n",
-      "importing rows 25000000 to 26000000...Done. 1866.528222322464 total seconds elapsed\n",
-      "importing rows 26000000 to 26024289...Done. 1868.3427991867065 total seconds elapsed\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-14-f8543da1323a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 11. Set the three variables equal to the function created in D1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwiki_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_transform_load\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+      "importing rows 0 to 1000000...Done. 100.42077398300171 total seconds elapsed\n",
+      "importing rows 1000000 to 2000000...Done. 204.93202018737793 total seconds elapsed\n",
+      "importing rows 2000000 to 3000000...Done. 322.72923398017883 total seconds elapsed\n",
+      "importing rows 3000000 to 4000000...Done. 433.82578778266907 total seconds elapsed\n",
+      "importing rows 4000000 to 5000000...Done. 551.8505854606628 total seconds elapsed\n",
+      "importing rows 5000000 to 6000000...Done. 661.9938442707062 total seconds elapsed\n",
+      "importing rows 6000000 to 7000000...Done. 762.4168710708618 total seconds elapsed\n",
+      "importing rows 7000000 to 8000000...Done. 865.7516613006592 total seconds elapsed\n",
+      "importing rows 8000000 to 9000000...Done. 966.0473144054413 total seconds elapsed\n",
+      "importing rows 9000000 to 10000000...Done. 1063.0973188877106 total seconds elapsed\n",
+      "importing rows 10000000 to 11000000...Done. 1159.9816982746124 total seconds elapsed\n",
+      "importing rows 11000000 to 12000000...Done. 1254.0069770812988 total seconds elapsed\n",
+      "importing rows 12000000 to 13000000...Done. 1349.536952972412 total seconds elapsed\n",
+      "importing rows 13000000 to 14000000...Done. 1447.1933062076569 total seconds elapsed\n",
+      "importing rows 14000000 to 15000000...Done. 1547.5958733558655 total seconds elapsed\n",
+      "importing rows 15000000 to 16000000...Done. 1649.4800608158112 total seconds elapsed\n",
+      "importing rows 16000000 to 17000000...Done. 1747.123883008957 total seconds elapsed\n",
+      "importing rows 17000000 to 18000000...Done. 1842.6476831436157 total seconds elapsed\n",
+      "importing rows 18000000 to 19000000...Done. 1936.8618988990784 total seconds elapsed\n",
+      "importing rows 19000000 to 20000000...Done. 2031.6196200847626 total seconds elapsed\n",
+      "importing rows 20000000 to 21000000...Done. 2133.5105102062225 total seconds elapsed\n",
+      "importing rows 21000000 to 22000000...Done. 2237.4041876792908 total seconds elapsed\n",
+      "importing rows 22000000 to 23000000...Done. 2334.9284541606903 total seconds elapsed\n",
+      "importing rows 23000000 to 24000000...Done. 2435.9025073051453 total seconds elapsed\n",
+      "importing rows 24000000 to 25000000...Done. 2530.627063035965 total seconds elapsed\n",
+      "importing rows 25000000 to 26000000...Done. 2627.9174716472626 total seconds elapsed\n",
+      "importing rows 26000000 to 26024289...Done. 2630.3433668613434 total seconds elapsed\n"
      ]
     }
    ],
    "source": [
     "# 11. Set the three variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load()"
+    "extract_transform_load(wiki_file, kaggle_file, ratings_file)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
